added 'allow-previews' to parent pom