@@ -9,10 +9,12 @@
     <modules>
         <module>tar-mod</module>
         <module>snapshots-mod</module>
+        <module>contexts-mod</module>
         <module>starter-mod</module>
         <module>advisers-mod</module>
         <module>loaders-mod</module>
         <module>checksums-mod</module>
+        <module>types-mod</module>
         <module>servers-mod</module>
         <module>downloaders-mod</module>
         <module>directories-mod</module>
@@ -107,4 +109,20 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.13.0</version>
+                <configuration>
+                    <source>21</source>
+                    <target>21</target>
+                    <compilerArgs>
+                        <arg>--enable-preview</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
